cap nhat truoc khi chuyen qua backend